welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:1: error: Missing closing brace `}' assumed here
def growFlowers() {
^FlowerPot:5: error: expected class or object definition
def marqueSol(c:Color) {
^FlowerPot:12: error: expected class or object definition
def faireS(c:Color) {
^FlowerPot:23: error: expected class or object definition
def flower(c:Color) {
^FlowerPot:34: error: expected class or object definition
def sePlacer() {
^