welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers() {
	flower(Color.RED)
}

def marqueSol(c:Color) {
	//colorier un carreau
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}

def faireS(c:Color) {
	//colorier les deux carreaux (S)
	marqueSol(c)
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
}

def flower(c:Color) {
	//colorier les fleurs
	faireS(c)
	gauche()
	avance()
	marqueSol(Color.YELLOW)
	avance()
	droite()
	faireS(c)
}

def sePlacer() {

